[tool.poetry]
name = "sherlock"
version = "0.1.0"
description = "Sherlock"
authors = ["bchuminx <bensabenteuer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1, < 3.9.7"
neo4j = "4.4.2"
configparser = "5.3.0"
pandas = "1.3.5"
numpy = "1.21.6"
spacy = "^3.4.3"
streamlit = "^1.14.1"

en_core_web_lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.4.1/en_core_web_lg-3.4.1-py3-none-any.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
